--- a/files/nix/home-manager/programs/emacs/README.org
+++ b/files/nix/home-manager/programs/emacs/README.org
@@ -946,7 +946,8 @@
        (defun my:disable-flycheck-in-scratch ()
          (when (string= (buffer-name) "*scratch*")
            (flycheck-mode -1)))
-       (add-hook 'flycheck-mode-hook #'my:disable-flycheck-in-scratch))
+
+       (add-hook 'emacs-startup-hook #'my:disable-flycheck-in-scratch))
 
      (use-package flycheck-posframe
        :ensure t
