Emacs: Add ox-typst configuration and sketchybar update_freq
- Configured ox-typst for org-mode to allow exporting to typst format,
  added a slide backend.
- Reduced network update frequency on sketchybar.

--- a/files/nix/home-manager/programs/emacs/README.org
+++ b/files/nix/home-manager/programs/emacs/README.org
@@ -1711,7 +1711,46 @@
 
       (use-package ox-typst
         :ensure t
-        :after org)
+        :after org
+        :config
+        (add-to-list 'org-src-lang-modes '("typst" . typst-ts))
+        (setq org-export-with-toc nil)
+        (org-export-define-backend 'typst-slide
+          '((export-block . org-typst-export-block)
+            (headline . org-typst-headline)
+            (item . org-typst-item)
+            (keyword . org-typst-keyword)
+            (section . org-typst-section)
+            (src-block . org-typst-src-block))
+          :menu-entry
+          '(?s "Export to Typst"
+               ((?F "As Typst buffer" org-typst-slide-export-as-typst)
+                (?f "As Typst file" org-typst-slide-export-to-typst)
+                (?p "As PDF file" org-typst-slide-export-to-pdf)))
+          :options-alist
+          '((:typst-format-drawer-function nil nil #'(lambda (_ contents) contents))
+            (:typst-format-inlinetask-function nil
+                                               nil
+                                               #'(lambda (_ contents) contents))))
+
+        (defun org-typst-slide-export-as-typst (&optional async subtreep visible-only body-only ext-plist)
+          (interactive)
+          (org-export-to-buffer 'typst-slide "*Org Typst Slide Export*"
+            async subtreep visible-only body-only ext-plist))
+
+        (defun org-typst-slide-export-to-typst (&optional async subtreep visible-only body-only ext-plist)
+          (interactive)
+          (let ((outfile (org-export-output-file-name ".typ" subtreep)))
+            (org-export-to-file 'typst-slide outfile
+              async subtreep visible-only body-only ext-plist)))
+        (defun org-typst-slide-export-to-pdf
+            (&optional async subtreep visible-only body-only ext-plist)
+          (interactive)
+          (setq org-typst--file-paths nil)
+          (let ((outfile (org-export-output-file-name ".typ" subtreep)))
+            (org-export-to-file 'typst-slide outfile
+              async subtreep visible-only body-only ext-plist
+              #'org-typst-compile))))
     #+end_src
 *** TOML
     #+begin_src emacs-lisp
