--- a/files/nix/home-manager/programs/emacs/README.org
+++ b/files/nix/home-manager/programs/emacs/README.org
@@ -1024,6 +1024,10 @@
         :custom
         (magit-log-section-commit-count 30)
         (magit-format-file-function #'magit-format-file-nerd-icons)
+        (magit-refresh-use-async t)
+        (magit-display-buffer-function #'magit-display-buffer-same-window-except-diff-v1)
+        (magit-bury-buffer-function #'magit-mode-quit-window)
+        (magit-diff-refine-hunk 'all)
         (magit-status-sections-hook
          '(magit-insert-status-headers
            magit-insert-untracked-files
@@ -1034,11 +1038,10 @@
            magit-insert-unpulled-from-pushremote
            magit-insert-unpulled-from-upstream))
         :bind (("C-x g" . magit-status)
-               ("C-x M-g" . magit-dispatch-popup))
+               ("C-x M-g" . magit-dispatch))
         :config
-        (magit-wip-mode 1)
-        (add-hook 'git-commit-mode-hook (lambda () (save-selected-window (magit-process)))))
-
+        ;; (magit-wip-mode 1) is commented out because it slows down staging operations on macOS by triggering multiple autosave Git commands.
+        (magit-wip-after-save-mode 1))
 
       (use-package diff-hl
         :ensure t
@@ -1046,8 +1049,9 @@
         :config
         (global-diff-hl-mode 1)
         (diff-hl-margin-mode 1)
-        :hook ((magit-pre-refresh-hook . diff-hl-magit-pre-refresh)
-               (magit-post-refresh-hook . diff-hl-magit-post-refresh)))
+        (unless (display-graphic-p)
+          (diff-hl-margin-mode 1))
+        :hook (magit-post-refresh-hook . diff-hl-magit-post-refresh))
     #+end_src
 *** Visual-regexp
     #+begin_src emacs-lisp
@@ -1205,7 +1209,7 @@
          (org-adapt-indentation t)
          (org-confirm-babel-evaluate nil)
          (org-capture-templates `(("i" " Inbox" entry (file+headline org-gtd-file "Inbox")
-                                   "** %^{Brief Description}")))
+                                   "** TODO %^{Brief Description}")))
          :config
          (keymap-unset orgtbl-mode-map "<backspace>")
          (defun org-insert-clipboard-image ()
